--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: Colton Blake
-description: >- # this means to ignore newlines until "baseurl:"
+description: >-
   Colton Blake's Resume.
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://www.coltonb.net" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/"
+url: "https://www.coltonb.net"
 github_username:  coltonb
 
 # Build settings
